Updating the example.
